:sparkles: feat: change params struct (#8)
