# mss-boot/generator/docs/swagger.json
@@ -270,9 +270,9 @@
             "type": "object",
             "properties": {
                 "params": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/form.TemplateParam"
                     }
                 }
             }
@@ -285,6 +285,17 @@
                     "items": {
                         "type": "string"
                     }
+                }
+            }
+        },
+        "form.TemplateParam": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "tip": {
+                    "type": "string"
                 }
             }
         },
